<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Mariia</string>
    <string name="last_name">Onokhina</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">
        Hey! I am Mariia, an incoming MA Statistics student at Columbia University. I just got a BS in Computer Science from Brooklyn College.
    </string>

    <string name="profile_hobby_header_text">Some of the things I do in my free time:</string>
    <string name="profile_hobby_first_text">🐦 Birdwatching</string>
    <string name="profile_hobby_second_text">🎱 Billiard </string>
    <string name="profile_hobby_third_text">🏓 Ping Pong </string>
</resources>